Pattern recognition, dvars, server/client commands

--- a/ZombieSystem/jZm.csproj
+++ b/ZombieSystem/jZm.csproj
@@ -6,7 +6,7 @@
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{284B20C9-CB08-4AB3-9C6A-B1DFE7FD837F}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ZombieSystem</RootNamespace>
     <AssemblyName>ZombieSystem</AssemblyName>
@@ -45,11 +45,11 @@
   <ItemGroup>
     <Reference Include="Microsoft.WindowsAPICodePack, Version=1.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\JariZ\Dropbox\C#\EasyCapture\EasyCapture\ScreenCap\bin\Release\Microsoft.WindowsAPICodePack.dll</HintPath>
+      <HintPath>bin\Debug\Microsoft.WindowsAPICodePack.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.WindowsAPICodePack.Shell, Version=1.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\JariZ\Dropbox\C#\EasyCapture\EasyCapture\ScreenCap\bin\Release\Microsoft.WindowsAPICodePack.Shell.dll</HintPath>
+      <HintPath>bin\Debug\Microsoft.WindowsAPICodePack.Shell.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
